# gpu-programming

./: .gitignore  README.md  interface.ipynb
assignments/a02/: .clangd  input.txt
assignments/a02/task01/: main.cu
assignments/a02/task02/: CMakeLists.txt
assignments/a02/task03/: CMakeLists.txt  matmul.cu
assignments/a02/utils/: utils.h
assignments/assignment01/: genMatrixFile.cpp  task1.md
assignments/assignment01/task2/: CMakeLists.txt  input.txt  main.cpp  output.txt
assignments/assignment01/task3/: MatrixAdd.cu  MatrixAdd.h  main.cpp
assignments/assignment01/task4/: plot.py
assignments/assignment02/task02/: main.cpp
assignments/assignment02/task03/: main.cpp  matmul-naive.cu
assignments/assignment02/task04/: CMakeLists.txt  main.cpp  matmul-naive.cu  matmul-tiling.cu  plot.py
assignments/assignment02/task05/: CMakeLists.txt  main.cpp  matmul-tiling.cu
assignments/assignment02/utils/: cuda_error.h  genMatrixFiles.cpp  utils.cpp  utils.h
blurring/: CMakeLists.txt  blur.cu  main.cpp  utils.cpp  utils.h
grayscale/: CMakeLists.txt  grayscale.cu  main.cpp  utils.cpp  utils.h
matmul/: CMakeLists.txt  main.cpp  matmul.cu  matmul.h  output.txt  utils.cpp  utils.h
mmvs/: README.md  main.cpp
mmvs/utils/: utils.cpp  utils.h
vectorAdd/: main.cpp  vectorAdd.cu  vectorAdd.h
